Seperated Javascript by page and fixed some picture spacing

--- a/style.css
+++ b/style.css
@@ -167,6 +167,9 @@ em {
 
 #dailyPicture img {
   padding: 0 50px;
+  max-height: 500px;
+  object-fit: cover;
+  margin-bottom: 40px;
 }
 
 footer {
